- Small fix for TP tag from Don Scorgie
* src/yelp-man-parser.c:
- Small fix for TP tag from Don Scorgie

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-18  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-man-parser.c:
+	- Small fix for TP tag from Don Scorgie
+
+2004-10-18  Shaun McCance  <shaunm@gnome.org>
+
 	* src/Makefile.am:
 	* src/yelp-gecko-utils.cpp:
 	* src/yelp-gecko-utils.h:
