- Declare i at top of db_pager_process
* src/yelp-db-pager.c:
- Declare i at top of db_pager_process

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-18  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-db-pager.c:
+	- Declare i at top of db_pager_process
+
+2004-10-18  Shaun McCance  <shaunm@gnome.org>
+
 	* configure.in:
 	* src/yelp-main.c:
 	* src/yelp-window.c:
