Updated Persian translation.
2004-10-18  Meelad Zakaria  <meelad@bamdad.org>

	* fa.po: Updated Persian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-18  Meelad Zakaria  <meelad@bamdad.org>
+
+	* fa.po: Updated Persian translation.
+
 2004-10-16  Meelad Zakaria  <meelad@bamdad.org>
 
 	* fa.po: Updated Persian translation.
