--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-18  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: fixed wrong date in PO-revision.
+
 2004-10-18  Meelad Zakaria  <meelad@bamdad.org>
 
 	* fa.po: Updated Persian translation.
