- Browse with caret - Color fixes
* data/yelp.schemas.in:
* data/ui/yelp.glade:
* src/yelp-gecko-utils.cpp:
* src/yelp-gecko-utils.h:
* src/yelp-html-gecko.c:
* src/yelp-html.h:
* src/yelp-settings.c:
* src/yelp-settings.h:
- Browse with caret
- Color fixes

* src/yelp-window.c:
- Proper history handling for errors

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-10-26  Shaun McCance  <shaunm@gnome.org>
+
+	* data/yelp.schemas.in:
+	* data/ui/yelp.glade:
+	* src/yelp-gecko-utils.cpp:
+	* src/yelp-gecko-utils.h:
+	* src/yelp-html-gecko.c:
+	* src/yelp-html.h:
+	* src/yelp-settings.c:
+	* src/yelp-settings.h:
+	- Browse with caret
+	- Color fixes
+
+	* src/yelp-window.c:
+	- Proper history handling for errors
+
 2004-10-20  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html.xsl.in:
