- Patch from Don Scorgie for popup menus on links
* data/ui/yelp-ui.xml:
* src/Makefile.am:
* src/yelp-base.c:
* src/yelp-gecko-utils.cpp:
* src/yelp-gecko-utils.h:
* src/yelp-html-gecko.c:
* src/yelp-html.h:
* src/yelp-window.c:
* src/yelp-window.h:
- Patch from Don Scorgie for popup menus on links

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-10-26  Shaun McCance  <shaunm@gnome.org>
 
+	* data/ui/yelp-ui.xml:
+	* src/Makefile.am:
+	* src/yelp-base.c:
+	* src/yelp-gecko-utils.cpp:
+	* src/yelp-gecko-utils.h:
+	* src/yelp-html-gecko.c:
+	* src/yelp-html.h:
+	* src/yelp-window.c:
+	* src/yelp-window.h:
+	- Patch from Don Scorgie for popup menus on links
+
+2004-10-26  Shaun McCance  <shaunm@gnome.org>
+
 	* data/yelp.schemas.in:
 	* data/ui/yelp.glade:
 	* src/yelp-gecko-utils.cpp:
