--- a/po/gu.po
+++ b/po/gu.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-6.gu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-10-11 23:54-0500\n"
-"PO-Revision-Date: 2004-08-20 14:41+0530\n"
+"POT-Creation-Date: 2004-10-26 04:47+0200\n"
+"PO-Revision-Date: 2004-10-26 18:47+0530\n"
 "Last-Translator: Ankit Patel <ankit@redhat.com>\n"
 "Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "<magnet@magnet-i.com>\n"
 "X-Generator: KBabel 1.3.1\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
 "\n"
 "\n"
 
@@ -225,7 +225,7 @@ msgstr "પી થ્રેડ"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr "સિસ્ટમ કાૅલ"
+msgstr "સિસ્ટમ કોલ"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
@@ -362,7 +362,7 @@ msgstr "પાછા"
 
 #: src/yelp-window.c:626
 msgid "Show previous page in history"
-msgstr "ઇતિહાસનુંં આગળનું પાનું બતાવો"
+msgstr "ઇતિહાસનું આગળનું પાનું બતાવો"
 
 #: src/yelp-window.c:636
 msgid "Forward"
@@ -390,7 +390,7 @@ msgstr "લાવી રહ્યા છે..."
 msgid "translator_credits"
 msgstr ""
 "નીરવ <nirav@magnet-i.com>\n"
-"અંકિત <ankit644@linux.net>\n"
+"અંકિત <ankit644@yahoo.com>\n"
 "અંકુર <ankur_surti@linux.net>\n"
 "અતિત <shahatit_84@linux.net>\n"
 "ભાવિન <bhavinshah@linux.net>\n"
@@ -673,3 +673,4 @@ msgstr "જીનોમ સાથે મદદ લો"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "મદદ"
+
