--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-28  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-10-18  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* fa.po: fixed wrong date in PO-revision.
