--- a/po/es.po
+++ b/po/es.po
@@ -1,3 +1,4 @@
+# translation of es.po to 
 # translation of es.po to Spanish
 # translation of yelp.HEAD.po to Spanish
 # yelp spanish .po file.
@@ -7,15 +8,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2004-02-08 23:19+0100\n"
-"Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
-"Language-Team: Spanish <traductores@es.gnome.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-10-29 21:17+0200\n"
+"PO-Revision-Date: 2004-10-29 21:20+0200\n"
+"Last-Translator: \n"
+"Language-Team:  <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -106,26 +108,62 @@ msgid "*"
 msgstr "*"
 
 #: data/ui/yelp.glade.h:2
+msgid "<b>Accessibility</b>"
+msgstr "<b>Accesibilidad</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "<b>Fonts</b>"
+msgstr "<b>Tipografías</b>"
+
+#: data/ui/yelp.glade.h:4
 msgid "C_ase sensitive"
 msgstr "Distinguir _capitalización"
 
-#: data/ui/yelp.glade.h:3
+#: data/ui/yelp.glade.h:5
 msgid "Find"
 msgstr "Buscar"
 
-#: data/ui/yelp.glade.h:4
+#: data/ui/yelp.glade.h:6
+msgid "Open Location"
+msgstr "Abrir dirección"
+
+#: data/ui/yelp.glade.h:7
+msgid "Preferences"
+msgstr "Preferencias"
+
+#: data/ui/yelp.glade.h:8
+msgid "_Browse with caret"
+msgstr "_Examinar con cursor"
+
+#: data/ui/yelp.glade.h:9
 msgid "_Find: "
 msgstr "_Buscar:"
 
-#: data/ui/yelp.glade.h:5
+#: data/ui/yelp.glade.h:10
+msgid "_Fixed width:"
+msgstr "Anchura _fija:"
+
+#: data/ui/yelp.glade.h:11
+msgid "_Location:"
+msgstr "_Dirección:"
+
+#: data/ui/yelp.glade.h:12
 msgid "_Next"
 msgstr "_Siguiente"
 
-#: data/ui/yelp.glade.h:6
+#: data/ui/yelp.glade.h:13
 msgid "_Previous"
 msgstr "_Anterior"
 
-#: data/ui/yelp.glade.h:7
+#: data/ui/yelp.glade.h:14
+msgid "_Use system fonts"
+msgstr "_Usar tipografía del sistema"
+
+#: data/ui/yelp.glade.h:15
+msgid "_Variable width:"
+msgstr "Anchura _variable:"
+
+#: data/ui/yelp.glade.h:16
 msgid "_Wrap around"
 msgstr "_Volver al principio"
 
@@ -137,25 +175,25 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:506 src/yelp-man-pager.c:297
 msgid "No href attribute found on yelp:document"
 msgstr "No se encontró atributo href en yelp:document"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:521 src/yelp-man-pager.c:312
 msgid "Out of memory"
 msgstr "Se agotó la memoria"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:709 src/yelp-man-pager.c:366
 msgid "Titlepage"
 msgstr "Página de título"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
+#: src/yelp-db-pager.c:711 stylesheets/l10n.xml.in.h:30
+#: src/yelp-man-pager.c:368
 msgid "Contents"
 msgstr "Índice"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:729 stylesheets/l10n.xml.in.h:69
+#: src/yelp-man-pager.c:386
 msgid "Unknown"
 msgstr "Desconocido"
 
@@ -179,6 +217,10 @@ msgstr "Los documentos SGML DocBook SGML ya no se soportan."
 msgid "The selected file could not be read."
 msgstr "El documento seleccionado no pudo abrirse."
 
+#: src/yelp-error.c:76
+msgid "The file could not be processed."
+msgstr "No se pudo procesar el archivo."
+
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
 msgstr "Define qué directorio de caché utilizar"
@@ -191,6 +233,10 @@ msgstr "No se pudo activar Yelp: «%s»"
 #: src/yelp-main.c:147
 msgid "Could not open new window."
 msgstr "No se pudo abrir una ventana nueva."
+
+#: src/yelp-main.c:325 yelp.desktop.in.h:2
+msgid "Help"
+msgstr "Ayuda"
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -253,147 +299,143 @@ msgstr "Vistas generales"
 msgid "System Administration"
 msgstr "Administración del sistema"
 
-#: src/yelp-pager.c:118
-msgid "Document URI"
-msgstr "URI del documento"
+#: src/yelp-pager.c:120
+msgid "Document Information"
+msgstr "Información del documento"
 
-#: src/yelp-pager.c:119
-msgid "The URI of the document to be processed"
-msgstr "La URI del documento a ser procesado"
+#: src/yelp-pager.c:121
+msgid "The YelpDocInfo struct of the document"
+msgstr "La estructura YelpDocInfo del documento"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:287
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: El contador de pausa es negativo."
 
-#: src/yelp-toc-pager.c:486
+#: src/yelp-toc-pager.c:538
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "No se pudo cargar el archivo OMF «%s»."
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:937
 msgid "Categories"
 msgstr "Categorías"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:951
 msgid "Documents"
 msgstr "Documentos"
 
-#: src/yelp-window.c:249
-msgid "/_File"
-msgstr "/_Archivo"
-
-#: src/yelp-window.c:250
-msgid "/File/_New window"
-msgstr "/Archivo/_Nueva ventana"
-
-#: src/yelp-window.c:253
-msgid "/File/_Close window"
-msgstr "/Archivo/_Cerrar ventana"
-
-#: src/yelp-window.c:257
-msgid "/_Edit"
-msgstr "/_Editar"
-
-#: src/yelp-window.c:258
-msgid "/Edit/_Find..."
-msgstr "/Editar/_Buscar..."
-
-#: src/yelp-window.c:261
-msgid "/Edit/Find Ne_xt"
-msgstr "/Editar/Buscar _siguiente"
-
-#: src/yelp-window.c:264
-msgid "/Edit/Find Pre_vious"
-msgstr "/Editar/Buscar _anterior"
-
-#: src/yelp-window.c:268
-msgid "/_Go"
-msgstr "/_Ir"
-
-#: src/yelp-window.c:269
-msgid "/Go/_Back"
-msgstr "/Ir/_Atrás"
-
-#: src/yelp-window.c:272
-msgid "/Go/_Forward"
-msgstr "/Ir/A_delante"
-
-#: src/yelp-window.c:275
-msgid "/Go/_Home"
-msgstr "/Ir/_Inicio"
-
-#: src/yelp-window.c:278
-msgid "/Go/"
-msgstr "/Ir/"
-
 #: src/yelp-window.c:279
-msgid "/Go/_Previous Page"
-msgstr "/Ir/Página _anterior"
+msgid "_File"
+msgstr "_Archivo"
+
+#: src/yelp-window.c:280
+msgid "_Edit"
+msgstr "_Editar"
+
+#: src/yelp-window.c:281
+msgid "_Go"
+msgstr "_Ir a"
 
 #: src/yelp-window.c:282
-msgid "/Go/_Next Page"
-msgstr "/Ir/Página _siguiente"
+msgid "_Help"
+msgstr "A_yuda"
 
 #: src/yelp-window.c:285
-msgid "/Go/_Contents"
-msgstr "/Ir/_Contenido"
-
-#: src/yelp-window.c:289
-msgid "/_Help"
-msgstr "/A_yuda"
+msgid "_New window"
+msgstr "Ventana _nueva"
 
 #: src/yelp-window.c:290
-msgid "/Help/_About"
-msgstr "/Ayuda/_Acerca de"
+msgid "Open _Location"
+msgstr "Abrir _dirección"
 
-#: src/yelp-window.c:352
-msgid "Help Browser"
-msgstr "Navegador de ayuda"
+#: src/yelp-window.c:295
+msgid "_Close window"
+msgstr "_Cerrar ventana"
 
-#: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
-msgid "Section"
-msgstr "Sección"
+#: src/yelp-window.c:301
+msgid "_Copy"
+msgstr "_Copiar"
 
-#: src/yelp-window.c:625
-msgid "Back"
-msgstr "Atrás"
+#: src/yelp-window.c:306
+msgid "_Find..."
+msgstr "_Buscar..."
 
-#: src/yelp-window.c:626
+#: src/yelp-window.c:311
+msgid "_Preferences"
+msgstr "_Preferencias"
+
+#: src/yelp-window.c:316
+msgid "_Back"
+msgstr "_Atrás"
+
+#: src/yelp-window.c:318
 msgid "Show previous page in history"
 msgstr "Muestra la página anterior del historial"
 
-#: src/yelp-window.c:636
-msgid "Forward"
-msgstr "Adelante"
+#: src/yelp-window.c:321
+msgid "_Forward"
+msgstr "A_delante"
 
-#: src/yelp-window.c:637
+#: src/yelp-window.c:323
 msgid "Show next page in history"
 msgstr "Muestra la siguiente página del historial"
 
-#: src/yelp-window.c:649
-msgid "Home"
-msgstr "Inicio"
+#: src/yelp-window.c:326
+msgid "_Home"
+msgstr "_Inicio"
 
-#: src/yelp-window.c:650
+#: src/yelp-window.c:328
 msgid "Go to home view"
 msgstr "Ir a la vista de inicio"
 
-#: src/yelp-window.c:860
+#: src/yelp-window.c:331
+msgid "_Previous Page"
+msgstr "Página _anterior"
+
+#: src/yelp-window.c:336
+msgid "_Next Page"
+msgstr "Página _siguiente"
+
+#: src/yelp-window.c:341
+msgid "_Contents"
+msgstr "_Índice"
+
+#: src/yelp-window.c:346
+msgid "_Open Link"
+msgstr "_Abrir enlace"
+
+#: src/yelp-window.c:351
+msgid "Open Link in _New Window"
+msgstr "Abrir enlace en una _ventana nueva"
+
+#: src/yelp-window.c:356
+msgid "_Copy Link Address"
+msgstr "_Copiar dirección del enlace"
+
+#: src/yelp-window.c:362
+msgid "_About"
+msgstr "A_cerca de"
+
+#: src/yelp-window.c:413
+msgid "Help Browser"
+msgstr "Navegador de ayuda"
+
+#: src/yelp-window.c:906
+msgid "Fin_d"
+msgstr "_Buscar"
+
+#: src/yelp-window.c:1172
 msgid "Loading..."
 msgstr "Cargando..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1860
 msgid "translator_credits"
 msgstr ""
 "Francisco J.F. Serrador <serrador@cvs.gnome.org>\n"
 "Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Germán Poo Caamaño <gpoo@ubiobio.cl>"
-
-#: src/yelp-window.c:1306
-msgid "A Help Browser for GNOME"
-msgstr "Visualizador de ayuda para Gnome"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
@@ -627,6 +669,10 @@ msgstr "Información de publicación"
 msgid "Revision History"
 msgstr "Histórico de revisiones"
 
+#: stylesheets/l10n.xml.in.h:61
+msgid "Section"
+msgstr "Sección"
+
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
 msgstr "Vea"
@@ -663,69 +709,3 @@ msgstr "Atención"
 msgid "Get help with GNOME"
 msgstr "Obtenga ayuda acerca de Gnome"
 
-#: yelp.desktop.in.h:2
-msgid "Help"
-msgstr "Ayuda"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "El documento «%s» no existe"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Buscar texto en el documento:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "A_justar línea automáticamente"
-
-#~ msgid "Find text..."
-#~ msgstr "Buscar texto..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Sólo palabras _completas"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Distinguir entre mayúsculas y minúsculas"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Buscar:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "Escritorio GNOME"
-
-#~ msgid "Additional documents"
-#~ msgstr "Documentos adicionales"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Páginas del manual"
-
-#~ msgid "Info Pages"
-#~ msgstr "Páginas info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Páginas del manual"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME es"
-
-#~ msgid "Free Software"
-#~ msgstr "Software libre"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#~ msgid "Loading&nbsp;&nbsp;&nbsp;"
-#~ msgstr "Cargando&nbsp;&nbsp;&nbsp;"
-
-#~ msgid "Loading.&nbsp;&nbsp;"
-#~ msgstr "Cargando.&nbsp;&nbsp;"
-
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Cargando..&nbsp;"
-
-#~ msgid "Previous"
-#~ msgstr "Anterior"
-
-#~ msgid "Next"
-#~ msgstr "Siguiente"
-
-#~ msgid "Search in the index"
-#~ msgstr "Buscar en el índice"
