Updated Czech translation.
2004-11-01  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

--- a/po/cs.po
+++ b/po/cs.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-01 02:49-0600\n"
-"PO-Revision-Date: 2004-10-29 10:49+0200\n"
+"POT-Creation-Date: 2004-11-01 13:26+0100\n"
+"PO-Revision-Date: 2004-11-01 22:22+0100\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -103,37 +103,35 @@ msgstr "Aplikace pro X"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Písmo pro neproporcionální text"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr ""
+msgstr "Písmo pro text"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Písmo pro text s pevnou šířkou."
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Písmo pro text s proměnlivou šířkou."
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "Používat klávesnicí ovladatelný kurzor při zobrazování stránek."
 
 #: data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Používat kurzor"
 
 #: data/yelp.schemas.in.h:7
-#, fuzzy
 msgid "Use system fonts"
-msgstr "_Používat písma systému"
+msgstr "Používat písma systému"
 
 #: data/yelp.schemas.in.h:8
-#, fuzzy
 msgid "Use the systems default fonts."
-msgstr "_Používat písma systému"
+msgstr "Používat implicitní písma systému."
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -398,7 +396,7 @@ msgstr "_Nastavení"
 
 #: src/yelp-window.c:319
 msgid "_Reload"
-msgstr ""
+msgstr "_Obnovit"
 
 #: src/yelp-window.c:325
 msgid "_Back"
@@ -768,7 +766,7 @@ msgstr "Získat nápovědu o GNOME"
 #.
 #: src/yelp-settings.c:125
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-201E"
 
 #~ msgid "A Help Browser for GNOME"
 #~ msgstr "Prohlížeč nápovědy pro GNOME"
