Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-01 02:49-0600\n"
-"PO-Revision-Date: 2004-10-28 22:18-0400\n"
+"POT-Creation-Date: 2004-11-01 20:00-0500\n"
+"PO-Revision-Date: 2004-11-01 22:18-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -102,37 +102,35 @@ msgstr "X Applications"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Font for fixed text"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr ""
+msgstr "Font for text"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Font for text with fixed width."
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Font for text with variable width."
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "Use a keyboard-controllable caret when viewing pages."
 
 #: data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Use caret"
 
 #: data/yelp.schemas.in.h:7
-#, fuzzy
 msgid "Use system fonts"
-msgstr "_Use system fonts"
+msgstr "Use system fonts"
 
 #: data/yelp.schemas.in.h:8
-#, fuzzy
 msgid "Use the systems default fonts."
-msgstr "_Use system fonts"
+msgstr "Use the system's default fonts."
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -397,7 +395,7 @@ msgstr "_Preferences"
 
 #: src/yelp-window.c:319
 msgid "_Reload"
-msgstr ""
+msgstr "_Reload"
 
 #: src/yelp-window.c:325
 msgid "_Back"
@@ -767,4 +765,4 @@ msgstr "Get help with GNOME"
 #.
 #: src/yelp-settings.c:125
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-201C"
