- s/Bigliography/Bibliography/ (I swear I've done this before)
* stylesheets/db2html-header.xsl:
- s/Bigliography/Bibliography/ (I swear I've done this before)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-04  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-header.xsl:
+	- s/Bigliography/Bibliography/ (I swear I've done this before)
+
 2004-10-11  Shaun McCance  <shaunm@gnome.org>
 
 	* NEWS:
