Updated Albanian translation.
2004-11-05  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

--- a/po/sq.po
+++ b/po/sq.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-01 02:49-0600\n"
-"PO-Revision-Date: 2004-10-09 16:55+0200\n"
+"POT-Creation-Date: 2004-11-05 04:14+0100\n"
+"PO-Revision-Date: 2004-11-05 11:42+0100\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -100,35 +100,35 @@ msgstr "Programe X"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Gërmat për tekstin fiks"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr ""
+msgstr "Gërmat për tekstet"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Gërmat për tekstet me gjerësi fikse."
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Gërmat për tekstet me gjerësi të ndryshueshme."
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "Përdor një vizore të kontrollueshme nga tastiera gjatë shikimit të faqeve."
 
 #: data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Përdor vizore"
 
 #: data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr ""
+msgstr "Përdor gërmat e sistemit"
 
 #: data/yelp.schemas.in.h:8
 msgid "Use the systems default fonts."
-msgstr ""
+msgstr "Përdor gërmat e prezgjedhura të sistemit."
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -136,11 +136,11 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Accessibility</b>"
-msgstr ""
+msgstr "<b> Açesibiliteti</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "<b>Fonts</b>"
-msgstr ""
+msgstr "<b>Gërmat</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "C_ase sensitive"
@@ -151,18 +151,16 @@ msgid "Find"
 msgstr "Gjej"
 
 #: data/ui/yelp.glade.h:6
-#, fuzzy
 msgid "Open Location"
-msgstr "Hap _Pozicionin"
+msgstr "Hap Pozicionin"
 
 #: data/ui/yelp.glade.h:7
-#, fuzzy
 msgid "Preferences"
-msgstr "Referime"
+msgstr "Preferime"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Browse with caret"
-msgstr ""
+msgstr "_Shfleto me vizore"
 
 #: data/ui/yelp.glade.h:9
 msgid "_Find: "
@@ -170,12 +168,11 @@ msgstr "_Gjej: "
 
 #: data/ui/yelp.glade.h:10
 msgid "_Fixed width:"
-msgstr ""
+msgstr "Gjerësia e _fiksuar:"
 
 #: data/ui/yelp.glade.h:11
-#, fuzzy
 msgid "_Location:"
-msgstr "Hap _Pozicionin"
+msgstr "_Pozicioni:"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Next"
@@ -187,11 +184,11 @@ msgstr "_Paraardhësja"
 
 #: data/ui/yelp.glade.h:14
 msgid "_Use system fonts"
-msgstr ""
+msgstr "_Përdor gërmat e sistemit"
 
 #: data/ui/yelp.glade.h:15
 msgid "_Variable width:"
-msgstr ""
+msgstr "Gjerësia e _ndryshueshme:"
 
 #: data/ui/yelp.glade.h:16
 msgid "_Wrap around"
@@ -384,20 +381,19 @@ msgstr "_Mbyll dritaren"
 
 #: src/yelp-window.c:304
 msgid "_Copy"
-msgstr ""
+msgstr "_Kopjo"
 
 #: src/yelp-window.c:309
 msgid "_Find..."
 msgstr "_Kërko..."
 
 #: src/yelp-window.c:314
-#, fuzzy
 msgid "_Preferences"
-msgstr "Referime"
+msgstr "_Preferime"
 
 #: src/yelp-window.c:319
 msgid "_Reload"
-msgstr ""
+msgstr "_Rilexo"
 
 #: src/yelp-window.c:325
 msgid "_Back"
@@ -436,17 +432,16 @@ msgid "_Contents"
 msgstr "_Përmbajtja"
 
 #: src/yelp-window.c:355
-#, fuzzy
 msgid "_Open Link"
-msgstr "Hap _Pozicionin"
+msgstr "_Hap lidhjen"
 
 #: src/yelp-window.c:360
 msgid "Open Link in _New Window"
-msgstr ""
+msgstr "Hap lidhjen në një dritare të _re"
 
 #: src/yelp-window.c:365
 msgid "_Copy Link Address"
-msgstr ""
+msgstr "_Kopjo adresën e lidhjes"
 
 #: src/yelp-window.c:371
 msgid "_About"
@@ -766,7 +761,5 @@ msgstr "Merr ndihmë me GNOME"
 #.
 #: src/yelp-settings.c:125
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-201C"
 
-#~ msgid "A Help Browser for GNOME"
-#~ msgstr "Një Udhëzues i Shfletueshëm për GNOME "
