Updated Spanish translation.
2004-11-07 Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -1,4 +1,5 @@
 # translation of es.po to 
+# translation of es.po to
 # translation of es.po to Spanish
 # translation of yelp.HEAD.po to Spanish
 # yelp spanish .po file.
@@ -9,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-01 02:49-0600\n"
-"PO-Revision-Date: 2004-10-29 21:20+0200\n"
+"POT-Creation-Date: 2004-11-07 00:01+0100\n"
+"PO-Revision-Date: 2004-11-07 00:04+0100\n"
 "Last-Translator: \n"
 "Language-Team:  <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -105,37 +106,35 @@ msgstr "Aplicaciones X"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Tipografía para el texto de ancho fijo"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr ""
+msgstr "Tipografía para el texto"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Tipografía para el texto con ancho fijo."
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Tipografía para el texto de ancho variable."
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "Usar un cursor controlable por el teclado al ver las páginas."
 
 #: data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Usar cursor"
 
 #: data/yelp.schemas.in.h:7
-#, fuzzy
 msgid "Use system fonts"
-msgstr "_Usar tipografía del sistema"
+msgstr "Usar tipografía del sistema"
 
 #: data/yelp.schemas.in.h:8
-#, fuzzy
 msgid "Use the systems default fonts."
-msgstr "_Usar tipografía del sistema"
+msgstr "Usar la tipografía predeterminada del sistema."
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -400,7 +399,7 @@ msgstr "_Preferencias"
 
 #: src/yelp-window.c:319
 msgid "_Reload"
-msgstr ""
+msgstr "_Recargar"
 
 #: src/yelp-window.c:325
 msgid "_Back"
@@ -771,4 +770,5 @@ msgstr "Obtenga ayuda acerca de Gnome"
 #.
 #: src/yelp-settings.c:125
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-00AB"
+
